# neo_kinematics_omnidrive2

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
include/: OmniKinematics.h  OmniWheel.h  VelocitySolver.h
launch/: test_setup.yaml  test_setup_.launch.py  test_setup_socket.yaml
src/: neo_omnidrive_node.cpp  neo_omnidrive_simulation_node.cpp  neo_omnidrive_socketcan.cpp  rclcpp_example.cpp
